--- a/index.css
+++ b/index.css
@@ -28,7 +28,7 @@
     border: 1px solid #ccc
   }
 
-  .middle4 {
+.middle4 {
     display: block;
       margin-left: auto;
       margin-right: auto;
@@ -39,3 +39,37 @@
       height: 35px;
       border: 1px solid #ccc
     }
+
+
+ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        font-size: 12px;
+        font-family: "Sans-serif";
+    }
+
+    .leftside {
+        float: left;
+        position: relative;
+        top: 410px;
+
+    }
+
+    .rightside {
+        float: right;
+        position: relative;
+        top: 410px;
+
+    }
+
+    a {
+       display: block;
+       padding: 8px;
+       background-color: #e8e6e4;
+    }
+
+    a:hover, a:visited, a:link, a:active
+  {
+      text-decoration: none;
+  }
